num_enum/tests/try_build/compile_fail/multiple_defaults.stderr
error: Multiple variants marked `#[num_enum(default)]` found
 --> $DIR/multiple_defaults.rs:7:16
  |
7 |     #[num_enum(default)]
  |                ^^^^^^^
